--- a/nginx.conf
+++ b/nginx.conf
@@ -34,7 +34,7 @@ http {
 	 location /api {
 	    # set $token  $arg_apijwt;
             rewrite /api/(.*) /$1  break;
-            proxy_pass http://localhost:8080;
+            proxy_pass http://backendserver:8000;
 	    # proxy_pass_header  Authorization;
 	    #proxy_set_header Authorization "Bearer " +  token;
 	    # proxy_pass_header  Authorization;
